fix scrollbar overlapping reader content.
git-svn-id: https://repos.nextthought.com/svn/nti-svn/NextThoughtWebApp/trunk@18174 3dfb626b-079f-4ab1-a9f6-4654e5377508

--- a/src/main/resources/scss/_content.scss
+++ b/src/main/resources/scss/_content.scss
@@ -363,8 +363,11 @@
 .x-reader-pane {
 
 	&, iframe {
-		//@include hardware-accelerate();
+		@include hardware-accelerate();
+	}
 
+	iframe {
+		margin: 0 0 0 auto;
 	}
 
 	.x-panel-body-reader {
